--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
-										<li><a href="linkedin.com/in/shreyparekh/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a href="https://www.linkedin.com/in/shreyparekh/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 									</ul>
 								</header>
 
